casting added to list